basic layout for about page

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <section class="main">
             <header class="nav-bar">
                 <ul class="nav-list">
-                    <li><a href="#"></a>Chef</li>
-                    <li><a href="#"></a>Recipe</li>
-                    <li><a href="#"></a>Pictures</li>
-                    <li><a href="#"></a>About</li>
+                    <li><a href="#">Chef</a></li>
+                    <li><a href="#">Recipe</a></li>
+                    <li><a href="#">Pictures</a></li>
+                    <li><a href="about.html">About</a></li>
                 </ul>
                 <button type="button">Login/Signup</button>
             </header>
